# novel-ai-voice-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
wix/: main.wxs
