[package]
name = "novel-ai-voice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
novelai_api = {path = "../novelai_api/"}
tokio = { version = "1.37.0", features = ["full"] }
